syntax = "proto3";

option java_multiple_files = true;
option java_package = "taka521.grpc.helloworld";

package helloworld;

service HelloWorldService {

    rpc HelloWorld (HelloRequest) returns (HelloResponse) {
    }

}

message HelloRequest {
    enum GENDER {
        MAN = 0;
        WOMAN = 1;
    }
    message User {
        string name = 1;
        int32 age = 2;
        GENDER gender = 3;
    }

    uint64 id = 1;
    User user = 2;
    string option = 3;
}

message HelloResponse {
    string message = 1;
    string option = 2;
}